--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
 <link href="index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<div class="navbar">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Portfolio</a>
+    <a href="#">Contact</a>
+</div>
 
 <div class="header">
     <h1>Ian Lizarda</h1>
 </div>
+
+
 
 </body>
 </html>
