--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Ian Lizarda</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -505,7 +505,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="https://www.instagram.com/ianlizzo/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://github.com/ianlizzo" class="icon fa-github"><span class="label">Github</span></a></li>
 					<li><a href="https://www.linkedin.com/in/ian-lizarda-22901514b/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="mailto:ianliz22@icloud.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Ian Lizarda</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
