Added favicon href

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 -->
 <html>
 	<head>
+
 		<title>Ian Lizarda</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" href="/PATH_TO_STATIC_FAVICON/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/PATH_TO_ANIMATED_FAVICON/favicon.ico" type="image/x-icon">
 	</head>
 	<body class="is-preload">
 
