fixed contact me

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							that help and serve others.
 						</p>
 						<ul class="actions">
-							<li><a href="https://www.linkedin.com/in/ian-lizarda-22901514b/" class="button">Contact Me</a></li>
+							<li><a href="mailto:ianliz22@icloud.com" class="button">Contact Me</a></li>
 						</ul>
 					</section>
 
