--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									<li>Java</li>
 									<li>Python</li>
 									<li>Javascript</li>
-									<li>C</li>
+									<li>C/C++</li>
 									<li>HTML</li>
 									<li>CSS</li>
 
@@ -123,18 +123,18 @@
 							<div class="col-6 col-12-xsmall">
 								<h3>Technologies</h3>
 								<ul>
-									<li>Microsoft Office</li>
-									<li>Google Suite</li>
-									<li>Eclipse</li>
-									<li>Git/Github</li>
-									<li>npm</li>
+									<li>Git</li>
+									<li>Node.js</li>
+									<li>ReactJS</li>
+									<li>Bash</li>
+									<li>Jenkins CI</li>
 									<li>Google App Engine</li>
 
 								</ul>
 							</div>
 						</div>
 						<ul class="actions">
-							<li><a href="images/thumbs/Resume.pdf" class="button">Resume</a></li>
+							<li><a href="images/thumbs/CurrentResume.pdf" class="button">Resume</a></li>
 						</ul>
 					</section>
 
