Added hero collision

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<p>
 							At LMU, I've learned so many things and have been involved with
 							all types of activities. I am a teaching assistant for the Keck
-							Lab and LMU's Google CSSIx, the Secretary of LMU's Association
+							Lab and LMU's Google CSSIx, the President of LMU's Association
 							for Computing Machinery, an active member of the Delta Sigma Phi
 							fraternity–just to name a few. I have also been involved with the
 							Japanese Cultural Club Kyodai and the LMU Men's Volleyball Club Team.
@@ -53,7 +53,7 @@
 							languages and technologies. I have programmed mainly in Java,
 							but have also worked with Python, Javascript, HTML & CSS, and C.
 							On top of that, I have used various technologies such as
-							Github/Git, npm, React.js, and Google App Engine. I hope to use
+							React, React Native, Node.js and Google App Engine. I hope to use
 							my knowledge and experience to develop intuitive applications
 							that help and serve others.
 						</p>
@@ -82,26 +82,27 @@
 									problem in a few seconds, depending on processor speed.
 									Written in Java.
 								</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/ianlizzo/CMSI-284-Computer-Systems-Organization/blob/master/utf32LEencoder.c" class="image fit thumb"><img src="images/thumbs/encodings.png" alt="" /></a>
-								<h3>UTF-32 Encoder</h3>
-								<p>
-									 A C program that reads, from standard input, text encoded in
-									  UTF-32LE, and writes the corresponding UTF-8 to standard
-										output.
-								</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
+              </article>
+              <article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/ianlizzo/CMSI-281-Data-Structures/tree/master/sentinal" class="image fit thumb"><img src="images/thumbs/sentiment.jpg" alt="" /></a>
 								<h3>Sentiment Analyzer</h3>
 								<p> A Java program that implements hash tables in order to
 									analyze text files and determine whether they were positive,
 									neutral, or negative.</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/ianlizzo/Hero-Collision" class="image fit thumb"><img src="images/thumbs/herocollision.jpg" alt="" /></a>
+								<h3>Hero Collision</h3>
+								<p>
+                  A web-app created in React utilizing the RESTful Superhero API 
+                  that allows users to create teams of superheroes from different 
+                  universes and battle against one another.
+								</p>
+							</article>
+						
 						</div>
 						<ul class="actions">
-							<li><a href="https://github.com/ianlizzo" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/ianlizzo" class="button">Full Github Portfolio</a></li>
 						</ul>
 					</section>
 
