--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 						</p>
 						<p>
 							For programming experience, I've worked with a few different
-							languages and technologies. I have programmed mainly in Java,
-							but have also worked with Python, Javascript, HTML & CSS, and C.
-							On top of that, I have used various technologies such as
-							React, React Native, Node.js and Google App Engine. I hope to use
+              languages and technologies. I have programmed mostly in Javascript, 
+              Python, and Java, as well as some experience with C/C++.
+							On top of that, I've programmed with various technologies such as
+							React, React Native, Node.js and Google App Engine. I seek to use
 							my knowledge and experience to develop intuitive applications
 							that help and serve others.
 						</p>
