fixed some texgt

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							For programming experience, I've worked with a few different
               languages and technologies. I have programmed mostly in Javascript, 
               Python, and Java, as well as some experience with C/C++.
-							On top of that, I've programmed with various technologies such as
+							On top of that, I've worked with various technologies such as
 							React, React Native, Node.js and Google App Engine. I seek to use
 							my knowledge and experience to develop intuitive applications
 							that help and serve others.
