New resume + skill changes

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 							<div class="col-6 col-12-xsmall">
 								<h3>Programming</h3>
 								<ul>
-									<li>Java</li>
+									<li>JavaScript</li>
 									<li>Python</li>
-									<li>Javascript</li>
+									<li>TypeScript</li>
+									<li>Java</li>
 									<li>C/C++</li>
-									<li>HTML</li>
-									<li>CSS</li>
+									<li>Haskell</li>
 
 								</ul>
 							</div>
@@ -126,8 +126,8 @@
 								<ul>
 									<li>Git</li>
 									<li>Node.js</li>
-									<li>ReactJS</li>
-									<li>Bash</li>
+									<li>React/React Native</li>
+									<li>GraphQL</li>
 									<li>Jenkins CI</li>
 									<li>Google App Engine</li>
 
