--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
 						<p>
 							At LMU, I've learned so many things and have been involved with
 							all types of activities. I am a teaching assistant for the Keck
-							Lab and LMU's Google CSSIx, the President of LMU's Association
+							Lab and LMU's Google CSSIx, the Co-President of LMU's Association
 							for Computing Machinery, an active member of the Delta Sigma Phi
 							fraternity–just to name a few. I have also been involved with the
 							Japanese Cultural Club Kyodai and the LMU Men's Volleyball Club Team.
 						</p>
 						<p>
 							For programming experience, I've worked with a few different
-              languages and technologies. I have programmed mostly in Javascript, 
-              Python, and Java, as well as some experience with C/C++.
+                            languages and technologies. I have programmed mostly in Javascript, 
+                            Python, and Java, as well as some experience with C/C++ and TypeScript.
 							On top of that, I've worked with various technologies such as
-							React, React Native, Node.js and Google App Engine. I seek to use
+							React, React Native, AWS and Google App Engine. I seek to use
 							my knowledge and experience to develop intuitive applications
 							that help and serve others.
 						</p>
@@ -117,7 +117,7 @@
 									<li>TypeScript</li>
 									<li>Java</li>
 									<li>C/C++</li>
-									<li>Haskell</li>
+									<li>HTML & CSS</li>
 
 								</ul>
 							</div>
@@ -128,7 +128,7 @@
 									<li>Node.js</li>
 									<li>React/React Native</li>
 									<li>GraphQL</li>
-									<li>Jenkins CI</li>
+									<li>AWS</li>
 									<li>Google App Engine</li>
 
 								</ul>
