--- a/index.html
+++ b/index.html
@@ -5,144 +5,186 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
+    <head>
 
-		<title>Ian Lizarda</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-	</head>
-	<body class="is-preload">
+        <title>Ian Lizarda</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1,
+            user-scalable=no" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    </head>
+    <body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Ian Lizarda</strong> <br>Welcome to my website!</br>
-					</h1>
-				</div>
-			</header>
+        <!-- Header -->
+        <header id="header">
+            <div class="inner">
+                <a href="#" class="image avatar"><img src="images/avatar.jpg"
+                        alt="" /></a>
+                <h1><strong>Ian Lizarda</strong> <br>Welcome to my website!</br>
+            </h1>
+        </div>
+    </header>
 
-		<!-- Main -->
-			<div id="main">
+    <!-- Main -->
+    <div id="main">
 
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>About Me</h2>
-						</header>
-						<p>
-							Hello, I'm Ian! Currently, I'm a Computer Science major at Loyola
-							 Marymount University. I was born & raised in the small but homely
-							 state of Rhode Island. After deciding that I needed to explore
-							 some new places, meet new people, and try lots of different
-							 things, I moved to Los Angeles to further my education.
-						</p>
-						<p>
-							At LMU, I've learned so many things and have been involved with
-							all types of activities. I am a teaching assistant for the Keck
-							Lab and LMU's Google CSSIx, the Co-President of LMU's Association
-							for Computing Machinery, an active member of the Delta Sigma Phi
-							fraternity–just to name a few. I have also been involved with the
-							Japanese Cultural Club Kyodai and the LMU Men's Volleyball Club Team.
-						</p>
-						<p>
-							For programming experience, I've worked with a few different
-                            languages and technologies. I have programmed mostly in Javascript, 
-                            Python, and Java, as well as some experience with C/C++ and TypeScript.
-							On top of that, I've worked with various technologies such as
-							React, React Native, AWS and Google App Engine. I seek to use
-							my knowledge and experience to develop intuitive applications
-							that help and serve others.
-						</p>
-						<ul class="actions">
-							<li><a href="mailto:ianliz22@icloud.com" class="button">Contact Me</a></li>
-						</ul>
-					</section>
+        <!-- One -->
+        <section id="one">
+            <header class="major">
+                <h2>About Me</h2>
+            </header>
+            <p>
+                Hello, I'm Ian! Currently, I'm a Computer Science major at
+                Loyola
+                Marymount University. I was born & raised in the small but
+                homely
+                state of Rhode Island. After deciding that I needed to explore
+                some new places, meet new people, and try lots of different
+                things, I moved to Los Angeles to further my education.
+            </p>
+            <p>
+                At LMU, I've learned so many things and have been involved with
+                all types of activities. I am a teaching assistant for the Keck
+                Lab and LMU's Google CSSIx, the Co-President of LMU's
+                Association
+                for Computing Machinery, an active member of the Delta Sigma Phi
+                fraternity–just to name a few. I have also been involved with
+                the
+                Japanese Cultural Club Kyodai and the LMU Men's Volleyball Club
+                Team.
+            </p>
+            <p>
+                For programming experience, my primary focus is application
+                development,
+                with an emphasis on frontend. I have programmed mostly in
+                Javascript
+                and Typescript, Python, and Java, as well as some experience
+                with Golang.
+                On top of that, I've worked with various technologies such as
+                React, React Native, AWS and Google App Engine. Currently, I'm a
+                Site
+                Reliability Engineering Intern at Atlassian, where I work on
+                various frontend &
+                backend development technologies on the Platform SRE team.
+            </p>
+            <ul class="actions">
+                <li><a href="mailto:ianliz22@icloud.com" class="button">Contact
+                        Me</a></li>
+            </ul>
+        </section>
 
-				<!-- Two -->
-					<section id="two">
-						<h2>Notable Projects</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/ianlizzo/LionHouse" class="image fit thumb"><img src="images/thumbs/lionhouse.png" alt="" /></a>
-								<h3>LionHouse</h3>
-								<p>A forum-based website hosted by Google App Engine, which
-									utilizes Datastore and Google Users API to store posts and
-									users. Written with a Python backend and HTML, CSS & Javascript
-									frontend.
-								</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/ianlizzo/CMSI-282-Algorithms/blob/master/SchoolgirlSolver.java" class="image fit thumb"><img src="images/thumbs/kirkman.png" alt="" /></a>
-								<h3>Kirkman Schoolgirl Solver</h3>
-								<p>Outputs a single solution to the infamous Kirkman Schoolgirl
-									problem in a few seconds, depending on processor speed.
-									Written in Java.
-								</p>
-              </article>
-              <article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/ianlizzo/CMSI-281-Data-Structures/tree/master/sentinal" class="image fit thumb"><img src="images/thumbs/sentiment.jpg" alt="" /></a>
-								<h3>Sentiment Analyzer</h3>
-								<p> A Java program that implements hash tables in order to
-									analyze text files and determine whether they were positive,
-									neutral, or negative.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/ianlizzo/Hero-Collision" class="image fit thumb"><img src="images/thumbs/herocollision.jpg" alt="" /></a>
-								<h3>Hero Collision</h3>
-								<p>
-                  A web-app created in React utilizing the RESTful Superhero API 
-                  that allows users to create teams of superheroes from different 
-                  universes and battle against one another.
-								</p>
-							</article>
-						
-						</div>
-						<ul class="actions">
-							<li><a href="https://github.com/ianlizzo" class="button">Full Github Portfolio</a></li>
-						</ul>
-					</section>
-
-					<section id="three">
-						<h4>Skills</h4>
-						<div class="row">
-							<div class="col-6 col-12-xsmall">
-								<h3>Programming</h3>
-								<ul>
-									<li>JavaScript</li>
-									<li>Python</li>
-									<li>TypeScript</li>
-									<li>Java</li>
-									<li>C/C++</li>
-									<li>HTML & CSS</li>
-
-								</ul>
-							</div>
-							<div class="col-6 col-12-xsmall">
-								<h3>Technologies</h3>
-								<ul>
-									<li>Git</li>
-									<li>Node.js</li>
-									<li>React/React Native</li>
-									<li>GraphQL</li>
-									<li>AWS</li>
-									<li>Google App Engine</li>
-
-								</ul>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><a href="images/thumbs/CurrentResume.pdf" class="button">Resume</a></li>
-						</ul>
-					</section>
+        <!-- Two -->
+        <section id="two">
+            <h2>Notable Projects</h2>
+            <div class="row">
+                <article class="col-6 col-12-xsmall work-item">
+                    <a
+                        href="https://apps.apple.com/us/app/playroll/id1457282211"
+                        class="image fit thumb"><img
+                            src="images/thumbs/playroll-logo.png" alt="" /></a>
+                    <h3>Playroll</h3>
+                    <p>A React Native mobile app that allows authenticated users
+                        to customize
+                        Spotify playlist creation with different filters and
+                        inputs. Users
+                        can recommend songs to other users, combine other
+                        playlists, include
+                        or excluse certain songs, and automatically generate
+                        playlists through
+                        the user's accounts.
+                    </p>
+                </article>
+                <article class="col-6 col-12-xsmall work-item">
+                    <a
+                        href="https://ianlizzo.github.io/atlassian-worldwide/"
+                        class="image fit thumb"><img
+                            src="images/thumbs/atlassian-supreme.png"
+                            style="background-color: bisque" alt="" /></a>
+                    <h3>Atlaswear</h3>
+                    <p> A project developed for Atlassian’s Global ShipIt
+                        hackathon, where streetwear-inspired t-shirts were
+                        created for each office and showcased with an
+                        interactive map & gallery view using React. Placed 3rd
+                        in semi-final rounds.</p>
+                </article>
+                <article class="col-6 col-12-xsmall work-item">
+                    <a href="https://lionhouse-lmu.appspot.com/" class="image
+                        fit thumb"><img src="images/thumbs/lionhouse.png" alt=""
+                            /></a>
+                    <h3>LionHouse</h3>
+                    <p>A forum-based website hosted by Google App Engine, which
+                        utilizes Datastore and Google Users API to store posts
+                        and
+                        users. Written with a Python backend and HTML, CSS &
+                        Javascript
+                        frontend.
+                    </p>
+                </article>
 
 
+                <article class="col-6 col-12-xsmall work-item">
+                    <a href="https://github.com/ianlizzo/Hero-Collision"
+                        class="image fit thumb"><img
+                            src="images/thumbs/herocollision.jpg" alt="" /></a>
+                    <h3>Hero Collision</h3>
+                    <p>
+                        A web-app created in React utilizing the RESTful
+                        Superhero API
+                        that allows users to create teams of superheroes from
+                        different
+                        universes and battle against one another.
+                    </p>
+                </article>
 
-				<!-- Three -->
-					<!-- <section id="three">
+            </div>
+            <ul class="actions">
+                <li><a href="https://github.com/ianlizzo" class="button">Full
+                        Github Portfolio</a></li>
+            </ul>
+        </section>
+
+        <section id="three">
+            <h4>Skills</h4>
+            <div class="row">
+                <div class="col-6 col-12-xsmall">
+                    <h3>Programming</h3>
+                    <ul>
+                        <li>JavaScript</li>
+                        <li>Python</li>
+                        <li>TypeScript</li>
+                        <li>Java</li>
+                        <li>Golang</li>
+                        <li>C/C++</li>
+
+                        <li>HTML & CSS</li>
+
+                    </ul>
+                </div>
+                <div class="col-6 col-12-xsmall">
+                    <h3>Technologies</h3>
+                    <ul>
+                        <li>React/React Native</li>
+                        <li>Node.js</li>
+                        <li>Git</li>
+                        <li>GraphQL</li>
+                        <li>AWS</li>
+                        <li>Google App Engine</li>
+                        <li>Docker</li>
+
+                    </ul>
+                </div>
+            </div>
+            <ul class="actions">
+                <li><a href="images/thumbs/CurrentResume.pdf" class="button">Resume</a></li>
+            </ul>
+        </section>
+
+
+
+        <!-- Three -->
+        <!-- <section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
@@ -178,10 +220,10 @@
 							</div>
 						</div>
 					</section> -->
-					<!-- Three -->
+        <!-- Three -->
 
-				<!-- Four -->
-				<!--
+        <!-- Four -->
+        <!--
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -499,32 +541,39 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 
 			</div> -->
+        <!-- Footer -->
+        <!-- <section id="four"> -->
+        <footer id="footer">
+            <div class="inner">
+                <ul class="icons">
+                    <li><a
+                            href="https://www.facebook.com/ian.lizarda?ref=bookmarks"
+                            class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://www.instagram.com/ianlizzo/"
+                            class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://github.com/ianlizzo" class="icon
+                            fa-github"><span class="label">Github</span></a></li>
+                    <li><a
+                            href="https://www.linkedin.com/in/ian-lizarda-22901514b/"
+                            class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="mailto:ianliz22@icloud.com" class="icon
+                            fa-envelope-o"><span class="label">Email</span></a></li>
+                </ul>
+                <ul class="copyright">
+                    <li>&copy; Ian Lizarda</li><li>Design: <a
+                            href="http://html5up.net">HTML5 UP</a></li>
+                </ul>
+            </div>
+        </footer>
+        <!-- </section> -->
 
-		<!-- Footer -->
-		<!-- <section id="four"> -->
-		<footer id="footer">
-			<div class="inner">
-				<ul class="icons">
-					<li><a href="https://www.facebook.com/ian.lizarda?ref=bookmarks" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.instagram.com/ianlizzo/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/ianlizzo" class="icon fa-github"><span class="label">Github</span></a></li>
-					<li><a href="https://www.linkedin.com/in/ian-lizarda-22901514b/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="mailto:ianliz22@icloud.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Ian Lizarda</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</footer>
-		<!-- </section> -->
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.poptrox.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    </body>
 </html>
